# enterprise-ai-platform

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  docker-compose.https.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml
backend/: README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users_and_refresh_tokens.py  0002_create_manufacturing_domain.py  0003_create_sensors.py  0004_create_sensor_data_platform.py  0005_create_mlops_foundation.py  0006_add_ai_jobs_and_promotion.py  0007_add_ai_prediction_monitoring.py  0008_add_controlled_retraining.py  0009_add_monitoring_orchestration.py  0010_add_automl_management.py  0011_adjust_automl_trial_uniqueness.py  0012_add_dataset_registry.py  0013_integrate_dataset_training.py  0014_add_secure_rag_chat.py  0015_add_pilot_identity_audit.py
backend/app/: __init__.py  main.py  version.py
backend/app/api/: router.py
backend/app/cli/: __init__.py  audit_operation.py
backend/app/config/: mlops.py  settings.py
backend/requirements/: base.txt  dev.txt
backend/tests/: ai_api_support.py  conftest.py  test_ai_api_parameters.py  test_ai_api_prediction.py  test_ai_api_training.py  test_ai_architecture.py  test_ai_artifacts.py  test_ai_automl_api.py  test_ai_automl_domain.py  test_ai_automl_execution.py  test_ai_automl_migration.py  test_ai_automl_repository.py  test_ai_automl_scheduling.py  test_ai_automl_search_spaces.py  test_ai_background_redis_integration.py  test_ai_background_training_smoke.py  test_ai_base_trainer.py  test_ai_domain.py  test_ai_drift_engine.py  test_ai_evaluation_viz.py  test_ai_governance_api.py  test_ai_governance_migration.py  test_ai_metrics.py  test_ai_mlflow_smoke.py  test_ai_model_registry.py  test_ai_monitoring_evaluations.py  test_ai_monitoring_migration.py  test_ai_monitoring_openapi.py  test_ai_monitoring_orchestration_api.py  test_ai_monitoring_orchestration_migration.py  test_ai_monitoring_retention.py  test_ai_monitoring_retraining_integration.py  test_ai_monitoring_scheduled_jobs.py  test_ai_monitoring_smoke.py  test_ai_openapi.py  test_ai_payload_limits.py  test_ai_prediction_event_models.py  test_ai_prediction_event_repository.py  test_ai_prediction_monitoring_capture.py  test_ai_prediction_monitoring_service.py  (+65 more)
(+477 files in other folders)
