[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-manufacturing-platform-backend"
version = "0.8.0"
description = "Backend service for the AI Manufacturing Platform."
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.13.3,<2.0.0",
    "dramatiq[redis]>=2.2.0,<3.0.0",
    "email-validator>=2.3.0,<3.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "joblib>=1.4.2,<2.0.0",
    "mlflow-skinny>=2.17.0,<3.0.0",
    "opentelemetry-api>=1.44.0,<2.0.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.44.0,<2.0.0",
    "opentelemetry-instrumentation-asgi>=0.65b0,<1.0.0",
    "opentelemetry-instrumentation-fastapi>=0.65b0,<1.0.0",
    "opentelemetry-instrumentation-redis>=0.65b0,<1.0.0",
    "opentelemetry-instrumentation-sqlalchemy>=0.65b0,<1.0.0",
    "opentelemetry-sdk>=1.44.0,<2.0.0",
    "opentelemetry-semantic-conventions>=0.65b0,<1.0.0",
    "optuna>=4.0.0,<5.0.0",
    "pandera[polars]>=0.22.0,<1.0.0",
    "polars>=1.16.0,<1.37.0",
    "prometheus-client>=0.25.0,<1.0.0",
    "PyJWT>=2.13.0,<3.0.0",
    "pydantic>=2.8.2,<3.0.0",
    "pydantic-settings>=2.5.2,<3.0.0",
    "python-multipart>=0.0.20,<1.0.0",
    "pwdlib[argon2]>=0.3.0,<1.0.0",
    "psycopg[binary]>=3.2.2,<4.0.0",
    "PyYAML>=6.0.2,<7.0.0",
    "redis>=5.1.0,<6.0.0",
    "scikit-learn>=1.9.0,<2.0.0",
    "sqlalchemy[asyncio]>=2.0.35,<3.0.0",
    "uvicorn[standard]>=0.30.6,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.22.1,<1.0.0",
    "black>=24.8.0,<25.0.0",
    "httpx>=0.27.2,<1.0.0",
    "mypy>=1.11.2,<2.0.0",
    "pre-commit>=3.8.0,<4.0.0",
    "pytest>=8.3.3,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "ruff>=0.6.9,<1.0.0",
    "types-PyYAML>=6.0.12,<7.0.0",
]

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
src = ["app", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "ARG"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_unreachable = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "integration: opt-in tests that require disposable local infrastructure",
]
